apps/mandova-ambulance-webapi/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
 name: mandova-ambulance-webapi
spec:
 parentRefs:
  - name: wac-hospital-gateway
    namespace: wac-hospital
  - name: wac-hospital-gateway  # Hack to make it work for common cluster
    namespace: wac-hospital-system
 rules:
  - matches:
      - path:
          type: PathPrefix
          value: /mandova-api
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /api
    backendRefs:
      - group: ""
        kind: Service
        name: mandova-ambulance-webapi
        port: 80
  - matches:
      - path:
          type: PathPrefix
          value: /mandova-openapi-ui
    backendRefs:
      - group: ""
        kind: Service
        name: mandova-openapi-ui
        port: 80
  - matches:
      - path:
          type: Exact
          value: /mandova-openapi
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplaceFullPath
          replaceFullPath: /openapi
    backendRefs:
      - group: ""
        kind: Service
        name: mandova-ambulance-webapi
        port: 80
